fix fp-s3 overspill bug

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ nav {
 }
 
 #fp-section3 {
-  height: 80vh;
+  min-height: 80vh;
   width: 100%;
   /*background-color: pink;*/
   border-top: solid 1px grey;
